2009-02-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added an xsession script for hildon-desktop. NB#101224

	* debian/control:
	* debian/hildon-desktop.xsession:
	* debian/rules:

2009-02-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c:
	  Reworked a bit to blink the tasks button when the text
	  of a groupped notification changes.

2009-02-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Coverity fixes:
	* src/home/hd-scrollable-group.c (hd_scrollable_group_parent_changed):
	Initialise width and height.
	* src/tidy/tidy-frame.c (tidy_frame_remove_actor): Set the child NULL
	after unreferencing it, not before.
	* src/tidy/tidy-style.c (tidy_style_set_effect_valist): Remove unused
	variable 'param.name'.

2009-02-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-title-bar.h
	* src/home/hd-title-bar.c:
	  Allowed left_pressed to be used from outside (bug 101522)
	* src/home/hd-render-manager.c:
	  Added sync_after function, to change clutter visibilities if they
	  are needed to be done after a transition ends. Fixes bug with
	  zoomed button.
	* src/tidy/tidy-blur-group.c:
	  Added vignette effect for when zooming out
	* src/mb/hd-decor-button.c
	* src/mb/hd-decor-button.h:
	  Cleaned up and added handler for new matchbox press + release
	  signals, to make right buttons highlight correctly.

2009-02-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-title-bar.c (hd_title_bar_set_switcher_pulse):
	  Typo correction to not corrupt HdTitleBar::state when the last
	  notification is closed.

2009-02-11  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	  Now check if home_blur has really changed, and only update if it
	  has. This saves a ~150ms recalc of the blur texture
	* src/mb/hd-atoms.c
	* src/mb/hd-atoms.h
	* src/mb/hd-remote-texture.c:
	  Bugfixing and making remote-texture more like animation-actor