@@ -60,9 +60,9 @@ struct HdWmClass
 
 int hd_wm_class_type (void);
 
-MBWindowManagerClient * hd_wm_get_current_app (MBWindowManager *wm);
-void                    hd_wm_update_current_app_property (MBWindowManager *wm,
-                                                           Window xid);
+MBWindowManagerClient * hd_wm_detemine_current_app (MBWindowManager *wm);
+Window                  hd_wm_current_app_is (MBWindowManager *wm,
+                                              Window xid);
 
 G_END_DECLS
 
