@@ -1,3 +1,15 @@
+2009-02-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	NB#100952
+	Don't go to switcher view if a closed application wasn't
+	the topmost one.
+
+	* src/home/hd-render-manager.c
+	* src/home/hd-switcher.c
+	* src/mb/hd-wm.c
+	* src/mb/hd-wm.h
+	* src/mb/hd-comp-mgr.c
+
 2009-02-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
 
 	Added an xsession script for hildon-desktop. NB#101224
